# homework-8

./: .gitignore  pyproject.toml  requirements.txt  test_admin_access.py  test_connection.py
etl/: data_loader.py
models/: __init__.py  author.py  contact.py  quote.py
quotes_project/authors/: forms.py  models.py  urls.py  views.py
quotes_project/authors/migrations/: 0001_initial.py
quotes_project/authors/templates/authors/: add_author.html  author_list.html
quotes_project/quotes/: forms.py  models.py  urls.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_rename_quote_quote_text.py
quotes_project/quotes/templates/quotes/: add_quote.html  index.html  quote_detail.html  quote_list.html  top_tags.html
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/register/: urls.py
quotes_project/static/css/: style.css
quotes_project/templates/: base.html  quote_list.html.html
quotes_project/templates/registration/: logged_out.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
quotes_scraper/: models.py
quotes_scraper/data/: new_authors.json  new_quotes.json
quotes_scraper/quotes_scraper/: items.py
quotes_scraper/quotes_scraper/spiders/: quotes_spider.py
scripts/: consumer_email.py  consumer_sms.py  load_authors.py  load_quotes.py  producer.py  search_quotes.py
templates/: base.html
utils/: db.py
